router wildcard and default page, some small improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>App Component</h1>
+<h1>Multi Range Slider demo</h1>
+<nav>
+    <a routerLink="/exercise1" routerLinkActive="active">Exercise 1</a> | 
+    <a routerLink="/exercise2" routerLinkActive="active">Exercise 2</a>
+</nav>
 <router-outlet></router-outlet>
